[project]
name = "binance_dashboard"
version = "0.1.0"
description = "A dashboard for binance market depth"
authors = [
    {name = "W-Jeng",email = "woonjeng@gmail.com"},
]
dependencies = [
    "websockets>=13.0.1",
    "asyncio>=3.4.3",
    "websocket-client>=1.8.0",
    "requests>=2.32.3",
    "httpx>=0.27.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
